2001-07-15  Gary V. Vaughan  <gary@gnu.org>

	* lib/missing: Updated.  Added comment explaining configure.ac
	oddity.

	From Bruno Haible <haible@ilog.fr>:
	(install-@DIR@LISP): Handle case where lispdir is not defined.
	(uninstall-@DIR@LISP): Likewise.

	From Bruno Haible <haible@ilog.fr>:
	* lispdir.am (uninstall-@DIR@LISP): DESTDIR was missing.

	From Bruno Haible <haible@ilog.fr>:
	* subdirs.am (distclean-recursive): Work around a bug in
	/bin/sh on FreeBSD which breaks the loop prematurely.
	* Makefile.in: Regenerated.

	From Marius Vollmer <mvo@zagadka.ping.de>:
	* automake.in (handle_texinfo): Version.texi files might be
	needed in more than one directory.

	* remake.am (config.status): Depends on configure, not
	configure.in.
	* Makefile.in: Regenerated.
	* m4/Makefile.in: Ditto.
	* tests/Makefile.in: Ditto.
	Reported by Nicolas Joly <njoly@pasteur.fr>

	* automake.in (usage): List distributed files correctly.
	Reported by Tim Mooney <mooney@dogbert.cc.ndsu.NoDak.edu>

	* aclocal.in: Update copyright messages to include 2001.
	* automake.in: Ditto.
	* missing: Ditto.
	* texinfos.am: Ditto.
	Reported by Tim Mooney <mooney@dogbert.cc.ndsu.NoDak.edu>

2001-07-15  Tim Mooney  <mooney@dogbert.cc.ndsu.NoDak.edu>

	* aclocal.in (scan_configure, add_file):  Handle the full
	macro name even if it contains numbers, such as I18N.

2001-07-14  Akim Demaille  <akim@epita.fr>

	* automake.in ($obsolete_rx): Stop at word boundaries.
	(&scan_one_configure_file): Skip VERSION=$2.
	* aclocal.in ($obsolete_rx): Stop at word boundaries.

2001-07-02  Gary V. Vaughan  <gary@gnu.org>

	* automake.in (scan_one_configure_file):  Diagnose use of
	autoconf-2.50's AC_CONFIG_HEADERS macro as an error.

2001-06-24  Gary V. Vaughan  <gary@gnu.org>

	From Martin Dickopp <firefly-mail@gmx.net>:
	* missing: replace hard coded configure.in with $configure_ac,
	set appropriately according to file presence.

2001-06-23  Akim Demaille  <akim@epita.fr>
