@@ -4330,9 +4330,19 @@ sub scan_one_configure_file
 	$seen_prog_install = 1 if /AC_PROG_INSTALL/;
         $seen_lispdir = 1 if /AM_PATH_LISPDIR/;
 
-        if (/AM_PROG_LIBTOOL/)
+        if (/A(C|M)_PROG_LIBTOOL/)
 	{
-	    $seen_libtool = 1;
+	    # We're not ready for this yet.  People still use a
+	    # libtool with no AC_PROG_LIBTOOL.  Once that is the
+	    # dominant version we can reenable this code -- but next
+	    # time by mentioning the macro in %obsolete_macros, both
+	    # here and in aclocal.in.
+
+	    # if (/AM_PROG_LIBTOOL/)
+	    # {
+	    # &am_conf_line_warning ($filename, $., "`AM_PROG_LIBTOOL' is obsolete, use `AC_PROG_LIBTOOL' instead");
+	    # }
+ 	    $seen_libtool = 1;
 	    $libtool_line = $.;
 	    $configure_vars{'LIBTOOL'} = $filename . ':' . $.;
 	    $configure_vars{'RANLIB'} = $filename . ':' . $.;
