@@ -1,5 +1,8 @@
 2001-07-15  Gary V. Vaughan  <gary@gnu.org>
 
+	automake.in (scan_one_configure_file):  AM_PROG_LIBTOOL is
+	still used regularly.
+
 	* lib/missing: Updated.  Added comment explaining configure.ac
 	oddity.
 
